Fix: calculator hugs edges on mobile phones
Adjusted with from 350px to 300px to better fit viewport on mobile phones

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@ body{
     border: 1px solid grey;
     border-radius: 10px;
     background-color: #FFFFFE;
-    width: 350px;
+    width: 300px;
     height: 500px;
     padding: 1rem;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
